Updated Contact in index

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<ul class="top-link">
 								<li><a href="#">ABout AA</a></li>
 								<li><a href="#">Doctors</a></li>
-								<li><a href="#">C</a></li>
+								<li><a href="#">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
 							<!-- End Contact -->
