--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!-- <!doctype html>
+<!doctype html>
 <html class="no-js" lang="zxx">
     <head>
         <!-- Meta Tags -->
-		<!-- <meta charset="utf-8">
+		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="keywords" content="Site keywords here">
 		<meta name="description" content="">
 		<meta name='copyright' content=''>
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> --> -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 		
 		<!-- Title -->
         <title>Mediplus - Free Medical and Doctor Directory HTML Template.</title>
@@ -42,8 +42,8 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/responsive.css">
 		
-    <!-- </head>
-    <body> -->
+    </head>
+    <body>
 	
 		<!-- Preloader -->
         <div class="preloader">
