--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="update-section">
         <h2>Dynamic Updates</h2>
         <p>Make changes to this section and watch them reflect live on the deployed site!</p>
+        <p>For example, you can change this text or add new content.</p>
         <p><strong>Current Timestamp:</strong> <span id="timestamp"></span></p>
     </div>
     <script>
