--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
             color: #333;
         }
         p {
-            color: #555; -->
+            color: #555;
         }
         .highlight {
             color: #007bff;
