--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,6 @@
     <div class="update-section">
         <h2>Dynamic Updates</h2>
         <p>Make changes to this section and watch them reflect live on the deployed site!</p>
-        <p>XYZ</p> -->
         
         <p><strong>Current Timestamp:</strong> <span id="timestamp"></span></p>
     </div>
